--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="wechat">公众号</string>
     <string name="system">体系</string>
     <string name="project">项目</string>
+    <string name="search">search</string>
 </resources>
